Fix negative letter-spacing problem

--- a/app/stylesheets/sass/partials/b-item-list.sass
+++ b/app/stylesheets/sass/partials/b-item-list.sass
@@ -19,8 +19,10 @@
   &__content
     @extend %grid
     // С этим нужно что-то делать
-    letter-spacing: 0
-    word-spacing: 0
+    font-size: 0
+
+    .b-text
+      font-size: 14px
 
   &__item
     @extend %grid__item
